Analytics Controller & Services

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "migration:show": "npm run typeorm -- migration:show"
   },
   "dependencies": {
-    "@nestjs/bull": "^11.0.4",
+    "@nestjs/axios": "^4.0.1",
+    "@nestjs/bullmq": "^11.0.4",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
@@ -36,13 +37,16 @@
     "bullmq": "^5.63.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "geoip-lite": "^1.4.10",
     "ioredis": "^5.8.2",
     "joi": "^18.0.1",
+    "json2csv": "^6.0.0-alpha.2",
     "nanoid": "^3.3.11",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1",
+    "rxjs": "^7.8.2",
     "typeorm": "^0.3.27",
+    "ua-parser-js": "^2.0.6",
     "validator": "^13.15.22"
   },
   "devDependencies": {
@@ -53,9 +57,12 @@
     "@nestjs/testing": "^11.0.1",
     "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.0",
+    "@types/geoip-lite": "^1.4.4",
     "@types/jest": "^30.0.0",
+    "@types/json2csv": "^5.0.7",
     "@types/node": "^22.19.0",
     "@types/supertest": "^6.0.2",
+    "@types/ua-parser-js": "^0.7.39",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
