--- a/package.json
+++ b/package.json
@@ -28,13 +28,17 @@
   "dependencies": {
     "@nestjs/axios": "^4.0.1",
     "@nestjs/bullmq": "^11.0.4",
+    "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/typeorm": "^11.0.0",
+    "@types/cache-manager": "^4.0.6",
     "bcrypt": "^6.0.0",
     "bullmq": "^5.63.0",
+    "cache-manager": "^7.2.4",
+    "cache-manager-redis-store": "^3.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "geoip-lite": "^1.4.10",
