--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/schedule": "^6.0.1",
+    "@nestjs/throttler": "^6.4.0",
     "@nestjs/typeorm": "^11.0.0",
     "@types/cache-manager": "^4.0.6",
     "bcrypt": "^6.0.0",
@@ -46,7 +48,9 @@
     "joi": "^18.0.1",
     "json2csv": "^6.0.0-alpha.2",
     "nanoid": "^3.3.11",
+    "open-graph-scraper": "^6.10.0",
     "pg": "^8.16.3",
+    "qrcode": "^1.5.4",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
     "typeorm": "^0.3.27",
@@ -65,6 +69,8 @@
     "@types/jest": "^30.0.0",
     "@types/json2csv": "^5.0.7",
     "@types/node": "^22.19.0",
+    "@types/open-graph-scraper": "^4.8.5",
+    "@types/qrcode": "^1.5.6",
     "@types/supertest": "^6.0.2",
     "@types/ua-parser-js": "^0.7.39",
     "eslint": "^9.39.1",
