--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@nestjs/throttler": "^6.4.0",
     "@nestjs/typeorm": "^11.0.0",
     "@types/cache-manager": "^4.0.6",
+    "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
     "bullmq": "^5.63.0",
     "cache-manager": "^7.2.4",
