Add Auth Entity & DTOs

--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
     "migration:show": "npm run typeorm -- migration:show"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/axios": "^4.0.1",
     "@nestjs/bullmq": "^11.0.4",
     "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/jwt": "^11.0.1",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/schedule": "^6.0.1",
     "@nestjs/throttler": "^6.4.0",
@@ -42,14 +45,20 @@
     "bullmq": "^5.63.0",
     "cache-manager": "^7.2.4",
     "cache-manager-redis-store": "^3.0.1",
+    "class-sanitizer": "^1.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "express-rate-limit": "^8.2.1",
     "geoip-lite": "^1.4.10",
+    "helmet": "^8.1.0",
     "ioredis": "^5.8.2",
     "joi": "^18.0.1",
     "json2csv": "^6.0.0-alpha.2",
     "nanoid": "^3.3.11",
+    "nodemailer": "^7.0.10",
     "open-graph-scraper": "^6.10.0",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "pg": "^8.16.3",
     "qrcode": "^1.5.4",
     "reflect-metadata": "^0.2.2",
@@ -70,7 +79,9 @@
     "@types/jest": "^30.0.0",
     "@types/json2csv": "^5.0.7",
     "@types/node": "^22.19.0",
+    "@types/nodemailer": "^7.0.4",
     "@types/open-graph-scraper": "^4.8.5",
+    "@types/passport-jwt": "^4.0.1",
     "@types/qrcode": "^1.5.6",
     "@types/supertest": "^6.0.2",
     "@types/ua-parser-js": "^0.7.39",
