--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/schedule": "^6.0.1",
+    "@nestjs/swagger": "^11.2.3",
     "@nestjs/throttler": "^6.4.0",
     "@nestjs/typeorm": "^11.0.0",
+    "@sentry/node": "^10.29.0",
     "@types/cache-manager": "^4.0.6",
     "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
@@ -63,16 +65,19 @@
     "qrcode": "^1.5.4",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
+    "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.27",
     "ua-parser-js": "^2.0.6",
-    "validator": "^13.15.22"
+    "validator": "^13.15.22",
+    "winston": "^3.18.3",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.18.0",
     "@nestjs/cli": "^11.0.0",
     "@nestjs/schematics": "^11.0.0",
-    "@nestjs/testing": "^11.0.1",
+    "@nestjs/testing": "^11.1.9",
     "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.0",
     "@types/geoip-lite": "^1.4.4",
@@ -83,7 +88,7 @@
     "@types/open-graph-scraper": "^4.8.5",
     "@types/passport-jwt": "^4.0.1",
     "@types/qrcode": "^1.5.6",
-    "@types/supertest": "^6.0.2",
+    "@types/supertest": "^6.0.3",
     "@types/ua-parser-js": "^0.7.39",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.0.1",
@@ -92,7 +97,7 @@
     "jest": "^30.0.0",
     "prettier": "^3.6.2",
     "source-map-support": "^0.5.21",
-    "supertest": "^7.0.0",
+    "supertest": "^7.1.4",
     "ts-jest": "^29.2.5",
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
