Fixed Integration Tests

--- a/.env.test
+++ b/.env.test
@@ -1,29 +1,33 @@
+# Application
 NODE_ENV=test
+PORT=3001
+BASE_URL=http://localhost:3001
 
-# Test Database
+# Database (Connected to docker-compose.test.yml port 5433)
 DB_HOST=localhost
-DB_PORT=5432
-DB_USERNAME=test
-DB_PASSWORD=test
-DB_DATABASE=test_db
+DB_PORT=5433
+DB_USERNAME=test_user
+DB_PASSWORD=test_password
+DB_DATABASE=urlshortener_test_db
 DB_SYNC=true
 DB_LOGGING=false
 
-# Test Redis
+# Redis (Connected to docker-compose.test.yml port 6380)
 REDIS_HOST=localhost
-REDIS_PORT=6379
-REDIS_PASSWORD=
-REDIS_DB=1
+REDIS_PORT=6380
+REDIS_PASSWORD=test_redis_pass
+REDIS_DB=0
 
-# Test JWT
-JWT_SECRET=test-jwt-secret-key
-JWT_REFRESH_SECRET=test-refresh-secret-key
+# JWT
+JWT_SECRET=test-secret-key-for-integration-tests-min-32-chars
+JWT_REFRESH_SECRET=test-refresh-secret-key-for-integration-tests
 
-# Test App Settings
-BASE_URL=http://localhost:3000
-SHORT_CODE_LENGTH=6
-CACHE_TTL=5
-
-# Test Rate Limiting
+# Rate Limiting
 RATE_LIMIT_TTL=60
-RATE_LIMIT_MAX=10
+RATE_LIMIT_MAX=100
+
+# Cache
+CACHE_TTL=3600
+
+# Short Code
+SHORT_CODE_LENGTH=6
