--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
+    "test": "jest --runInBand",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:env:up": "docker-compose -f docker-compose.test.yml up -d",
     "test:env:down": "docker-compose -f docker-compose.test.yml down",
     "test:service": "jest --config ./test/jest-service.json",
-    "test:integration": "jest --config ./test/jest-integration.json",
+    "test:integration": "jest --runInBand --config ./test/jest-integration.json",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "typeorm": "typeorm-ts-node-commonjs -d src/common/config/typeorm-cli.config.ts",
     "migration:generate": "npm run typeorm -- migration:generate",
