--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:env:up": "docker-compose -f docker-compose.test.yml up -d",
     "test:env:down": "docker-compose -f docker-compose.test.yml down",
-    "test:service": "jest --config ./test/jest-service.json",
+    "test:unit": "jest --config ./test/jest-unit.json",
     "test:integration": "jest --runInBand --config ./test/jest-integration.json",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "test:e2e": "jest --runInBand --detectOpenHandles --config ./test/jest-e2e.json",
     "typeorm": "typeorm-ts-node-commonjs -d src/common/config/typeorm-cli.config.ts",
     "migration:generate": "npm run typeorm -- migration:generate",
     "migration:create": "npm run typeorm -- migration:create",
