Added url unit test

--- a/.env.test
+++ b/.env.test
@@ -2,6 +2,7 @@
 NODE_ENV=test
 PORT=3001
 BASE_URL=http://localhost:3001
+ADMIN_PASS=aklnsfsokdgfnowqaeihnwierfhn
 
 # Database (Connected to docker-compose.test.yml port 5433)
 DB_HOST=localhost
